--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "printenv2"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 authors = [
     "Xinkai Chen <xinkai.chen@qq.com>",
@@ -17,6 +17,9 @@ keywords = ["printenv", "coreutils"]
 [dependencies]
 colored = { version = "2" }
 clap = { version = "3.1.12", features = ["derive"] }
+
+[target.'cfg(target_family = "windows")'.dependencies]
+windows = { version = "0.36.1", features = ["alloc", "Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_SystemServices", "Win32_System_Kernel", "Win32_System_Diagnostics_Debug"] }
 
 [profile.release]
 opt-level = 3
