--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,16 @@ colored = { version = "2" }
 clap = { version = "3.1.12", features = ["derive"] }
 
 [target.'cfg(target_family = "windows")'.dependencies]
-windows = { version = "0.36.1", features = ["alloc", "Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_SystemServices", "Win32_System_Kernel", "Win32_System_Diagnostics_Debug"] }
+windows = { version = "0.36.1", features = [
+    "alloc",
+    "Win32_System_Threading",
+    "Win32_Foundation",
+    "Win32_Security",
+    "Win32_System_SystemServices",
+    "Win32_System_Kernel",
+    "Win32_System_Diagnostics_Debug",
+    "Win32_System_LibraryLoader",
+] }
 
 [profile.release]
 opt-level = 3
