--- a/.github/workflows/webassembly.yml
+++ b/.github/workflows/webassembly.yml
@@ -16,6 +16,7 @@ jobs:
         os: [ubuntu-latest]
     runs-on:  ${{ matrix.os }}
     steps:
+    - uses: actions/checkout@v4
     - uses: bytecodealliance/actions/wasmtime/setup@v1
     - name: Cargo component
       run: |
