--- a/.github/workflows/webassembly.yml
+++ b/.github/workflows/webassembly.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: bytecodealliance/actions/wasmtime/setup@v1
     - name: Cargo component
       run: |
+        rustup target add wasm32-wasi
         cargo install cargo-component
     - name: Check
       run: |
